[gd_scene load_steps=5 format=3 uid="uid://bv8qf2h6mnp4c"]

[ext_resource type="Script" uid="uid://b2ugfd1wsnr8c" path="res://Script/final_choice_overlay.gd" id="1_final_choice"]
[ext_resource type="FontFile" uid="uid://dn6lk74wvhckb" path="res://GUI/Pixelify_Sans (1)/static/PixelifySans-Bold.ttf" id="2_font"]
[ext_resource type="PackedScene" uid="uid://cxg8n5f4vk2pm" path="res://Scene/EndingVideoPlayer.tscn" id="3_video_player"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.851769, 0.8517689, 0.85176903, 0.19607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.96862745, 0.50980395, 0.35686275, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="FinalChoiceOverlay" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_final_choice")
ending_video_player_scene = ExtResource("3_video_player")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96862745, 0.50980395, 0.35686275, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "WHAT WOULD YOU CHOOSE?"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "Choose your path. There is no going back."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EndingAButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.96862745, 0.50980395, 0.35686275, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Purify"

[node name="EndingBButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.96862745, 0.50980395, 0.35686275, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Embrace"
